# template-rust-backend-with-electron-frontend

./: .gitignore  .prettierrc  .rustfmt.toml  Cargo.toml  LICENSE  README.md  cargo-generate.toml  package-lock.json  package.json
native/: Cargo.toml  artifacts.json  build.rs  index.node
native/backend/: Cargo.toml
native/backend/src/: lib.rs
native/src/: lib.rs
public/: electron.js  index.html  preload.js
src/: App.js
src.rs/lib/: Cargo.toml
src.rs/lib/src/: lib.rs
