[package]
name = "{{project-name}}-marshalling"
version = "0.0.0"
authors = ["{{authors}}"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "{{crate_name}}_marshalling"
crate-type = ["cdylib"]

[build-dependencies]
# node-bindgen = { version = "2.1.1", features = ["build"] }
node-bindgen = { git = "https://github.com/infinyon/node-bindgen", rev="4b15241fd5b7e6789bbca06a2698ba1a6440459e", features = ["build"] }

[dependencies]
{{project-name}}-backend = { path = "backend" }
# node-bindgen = { version = "2.1.1" }
node-bindgen = { git = "https://github.com/infinyon/node-bindgen", rev="4b15241fd5b7e6789bbca06a2698ba1a6440459e" }
